--- a/style.css
+++ b/style.css
@@ -4,14 +4,13 @@ body {
 
     font-family: "Arial", sans-serif;
     background-color: #191919;
+}
 
 
 h1, h2 {
 
-    color: #EFFBFB;
     font-family: "Arial", sans-serif;
     text-align: left;
-    font-size: 20px;
 }
 
 
@@ -32,15 +31,17 @@ h1, h2 {
 
     color: #E6E6E6;
 
+    font-size: 20px;
+
     padding-top: 5px;
     padding-right: 10px;
     padding-bottom: 5px;
     padding-left: 10px;
 }
 
+
 .writing {
 
     color: #E6E6E6;
-    text-align: justify;
     font-size: 15px;
 }
